DBConnectionPool and UserDao update

--- a/src/main/resources/database.properties
+++ b/src/main/resources/database.properties
@@ -1,18 +1,14 @@
-# ========== ???????? ????????? ??????????? ==========
 db.url=jdbc:mysql://localhost:3306/online_pharmacy
 db.user=root
-db.password=password123
+db.password=Borovkova301172#
 db.pool.size=10
 
-# ========== ?????????????? ????????? MySQL ==========
 db.driver=com.mysql.cj.jdbc.Driver
 db.connection.timeout=30
 db.validation.query=SELECT 1
 
-# ========== ????????? ????????? ==========
 db.character.encoding=UTF-8
 db.use.unicode=true
 
-# ========== ????????? SSL ? ???????? ==========
 db.use.ssl=false
 db.server.timezone=UTC
